--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -1,5 +1,22 @@
-.list {
+.container {
     display: flex;
-    gap: 24px;
-    flex-wrap: wrap;
+    margin: 0 auto;
+}
+
+.list {
+    display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 24px;
+  padding: 0;
+
+}
+
+.item {
+    max-width:( 100% - (24 * 7 )) / 8;
+    height: 240px;
+    transition: transform 0.3s ease; 
+}
+
+.item:hover, .item:focus {
+    transform: scale(1.1);
 }
