--- a/src/components/SearchBar/SeachBar.module.css
+++ b/src/components/SearchBar/SeachBar.module.css
@@ -47,6 +47,7 @@
     height: 100px;
     margin: auto 0;
     transition: transform 0.3s ease; 
+    cursor: pointer; 
 }
 
 .btn:hover, .btn:focus {
